--- a/ebookproject/src/main/resources/application.properties
+++ b/ebookproject/src/main/resources/application.properties
@@ -47,3 +47,11 @@ spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8
 spring.security.oauth2.client.registration.naver.client-id=
 spring.security.oauth2.client.registration.naver.client-secret=
 spring.security.oauth2.client.registration.naver.scope=name,nickname
+
+
+########################### MAIL SENDER
+# SMTP ??
+spring.mail.host=smtp.naver.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
