--- a/ebookproject/src/main/resources/application.properties
+++ b/ebookproject/src/main/resources/application.properties
@@ -14,9 +14,9 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.config-location=classpath:mybatis/configuration.xml
 
 ####################### GOOGLE LOGIN
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=
 spring.security.oauth2.client.registration.google.client-id=
-spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email
 
 ####################### KAKAO LOGIN
