--- a/ebookproject/src/main/resources/application.properties
+++ b/ebookproject/src/main/resources/application.properties
@@ -14,8 +14,8 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.config-location=classpath:mybatis/configuration.xml
 
 ####################### GOOGLE LOGIN
-spring.security.oauth2.client.registration.google.redirect-uri=
-spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.redirect-uri=a
+spring.security.oauth2.client.registration.google.client-id=b
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email
 
@@ -29,8 +29,8 @@ spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
 
-spring.security.oauth2.client.registration.kakao.client-id=
-spring.security.oauth2.client.registration.kakao.client-secret=
+spring.security.oauth2.client.registration.kakao.client-id=a
+spring.security.oauth2.client.registration.kakao.client-secret=b
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname
 
@@ -44,8 +44,8 @@ spring.security.oauth2.client.registration.naver.client-name=naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
 
-spring.security.oauth2.client.registration.naver.client-id=
-spring.security.oauth2.client.registration.naver.client-secret=
+spring.security.oauth2.client.registration.naver.client-id=a
+spring.security.oauth2.client.registration.naver.client-secret=b
 spring.security.oauth2.client.registration.naver.scope=name,nickname
 
 
