--- a/ebookproject/src/main/resources/application.properties
+++ b/ebookproject/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=ebookproject
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.5.20:3306/ebook_project
-spring.datasource.username=ebookteam
+spring.datasource.url=jdbc:mysql://localhost:3306/ebook_project
+spring.datasource.username=root
 spring.datasource.password=1234
 
 spring.thymeleaf.servlet.produce-partial-output-while-processing=false
