--- a/ebookproject/src/main/resources/application.properties
+++ b/ebookproject/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.password=1234
 spring.thymeleaf.servlet.produce-partial-output-while-processing=false
 spring.thymeleaf.cache=false
 
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
+
 
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.config-location=classpath:mybatis/configuration.xml
