--- a/ebookproject/src/main/resources/application.properties
+++ b/ebookproject/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=ebookproject
 
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://192.168.5.20:3306/ebook_project
-#spring.datasource.username=ebookteam
-#spring.datasource.password=1234
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ebook_project
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://192.168.5.20:3306/ebook_project
+spring.datasource.username=ebookteam
 spring.datasource.password=1234
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/ebook_project
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
 spring.thymeleaf.servlet.produce-partial-output-while-processing=false
 spring.thymeleaf.cache=false
