--- a/ebookproject/src/main/resources/application.properties
+++ b/ebookproject/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=ebookproject
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ebook_project
-spring.datasource.username=root
+spring.datasource.username=webuser
 spring.datasource.password=1234
 
 spring.thymeleaf.servlet.produce-partial-output-while-processing=false
